# Project_Student_MySQLTableData_FeatureEngineering

./: README.md  main.py  pyproject.toml  requirements.txt  studentReport.ipynb
